[project]
name = "finagent-mcp"
version = "0.1.0"
description = "Free financial analysis MCP server — stock quotes, financials, and market news"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.40",
]

[project.scripts]
finagent = "finagent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finagent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
